sabnzdb/deployment exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzdb-exporter
spec:
  selector:
    matchLabels:
      app: sabnzdb-exporter
      release: sabnzdb-exporter
  template:
    metadata:
      labels:
        app: sabnzdb-exporter
        release: sabnzdb-exporter
    spec:
 
      containers:
      
      - image: msroest/sabnzbd_exporter
        imagePullPolicy: Always
        name: sabnzdb-exporter
        ports:
        - containerPort: 9387
          name: metrics
          protocol: TCP
        args:
          - "radarr"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
