sabnzdb/service exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzdb-exporter-service    # < name of the service
  namespace: sabnzdb # < namespace where place the deployment and pods
spec:
  selector:
    app: sabnzdb-exporter # < reference to the deployment (connects with this deployment)
  ports:
    - name: metrics
      protocol: TCP
      port: 9387
