sabnzdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzdb-service    # < name of the service
  namespace: sabnzdb # < namespace where place the deployment and pods
spec:
  selector:
    app: sabnzdb # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 8096
