sabnzdb/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzdb-ingress
  namespace: sabnzdb
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzdb.olympus.mangelschots.org`)
      kind: Rule
      services:
        - name: sabnzdb-service
          port: 8080
  tls:
    secretName: olympus-mangelschots-org-tls
